chore(deploy): 固化 2G 演示机内存调优——JVM 限堆/SerialGC/GC 日志 + shared_buffers + 特性开关环境变量化（#677） (#679)
Goal: 部署件固化（#677）

2G 演示机 GC 实测堆存活：control-plane ~69MB、gateway ~24MB——原 512m/640m 默认与镜像兜底 MaxRAMPercentage=75（768m）严重超配。服务器侧已完成瘦身并验证（swap 899→85MB、常驻口径 85%→~60%、全栈 healthy、零 OOM），本提交把目标态回流仓库以防整树刷新回退；顺带把留痕消费端/响应缓存开关环境变量化（默认关，行为不变）。

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>